<resources>
    <string name="app_name">My Application</string>
    <!--search-->
    <string name="search_msg"> ¿Qué deseas buscar?</string>
    <string name="buy">Comprar</string>
    <string name="ubication">Ubicación</string>
    <string name="main_information">Principal Información</string>
    <string name="sales">Ventas</string>
    <string name="number_sales">Numero de ventas:</string>
    <string name="quantity_available">Cantidad disponible:</string>
    <string name="state_name">Estado:</string>
    <string name="city">Ciudad:</string>
    <string name="not_found">No encontramos publicaciones</string>
    <string name="not_found_secundary">Revisa que la palabra esté bien escrita</string>
    <string name="error_messague">Ocurrio un error, por faovr intente más tarde</string>


</resources>
