<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context=".presentation.detail.DetailActivity"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/informationMainTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_information"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/mainCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:layout_constraintTop_toBottomOf="@id/informationMainTextView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/productImageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </ImageView>

            <TextView
                android:id="@+id/tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <TextView
                android:id="@+id/priceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:textSize="15dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/productImageView"
                app:layout_constraintTop_toBottomOf="@id/tag" />

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="3"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="@id/priceTextView"
                app:layout_constraintTop_toBottomOf="@id/priceTextView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/secundaryInformationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sales"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainCardView"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/secundaryCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secundaryInformationTextView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constratinLayoutSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/salesNumberTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_sales"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/salesNumberValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                app:layout_constraintLeft_toRightOf="@id/salesNumberTextView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/quantityAvailableTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_available"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/salesNumberTextView" />

            <TextView
                android:id="@+id/quantityAvailableValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/quantityAvailableTextView"
                app:layout_constraintTop_toBottomOf="@id/salesNumberTextView" />

            <TextView
                android:id="@+id/tagFreeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:layout_constraintTop_toBottomOf="@id/quantityAvailableTextView" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/tertearyInformationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ubication"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secundaryCardView"
        />



    <androidx.cardview.widget.CardView
        android:id="@+id/tertearyCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:layout_constraintTop_toBottomOf="@id/tertearyInformationTextView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">


            <TextView
                android:id="@+id/cityTextViewLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/city"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/cityTextViewLabel"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/countryTextViewLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/state_name"
                app:layout_constraintTop_toBottomOf="@id/cityTextViewLabel" />

            <TextView
                android:id="@+id/countryTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/countryTextViewLabel"
                app:layout_constraintTop_toBottomOf="@id/cityTextViewLabel">

            </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buyBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/buy"
        android:background="@color/btn_color"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>